# bookstore

./: .gitignore  Dockerfile  db.sqlite3  pyproject.toml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: __init__.py  test_order_serializer.py
order/viewsets/: order_viewset.py
product/: admin.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  product.py
product/serializers/: __init__.py  product_serializer.py
product/tests/test_serializers/: __init__.py
product/tests/test_viewset/: __init__.py  test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
